--- a/Simulation.Rmd
+++ b/Simulation.Rmd
@@ -322,20 +322,22 @@ $$\text{SISE} = \sum_{i=1}^n\sum_{g=1}^m\int_\Delta\big(\hat{Y}_i^{(g)}(\tau)-Y_
 
 
 ```{r}
-alpha <- simulation[[1]]$alpha
-theta <- simulation[[1]]$theta
-gamma_tau <- est_gamma(Phi, theta)
-Y <- Y_list[[1]]
-X <- X_list[[1]]
 h <- tau_seq[2] - tau_seq[1]
 
-
-Y_hat <- lapply(gamma_tau, FUN = function(x) X %*% (x + alpha))
-
-SISE <- (sapply(Y_hat, FUN = function(x) as.vector(x - Y)^2 %>% sum) * h/m)
+SISE <- vector(mode = "numeric", length = simul_times)
+for(simul in 1:simul_times) {
+  alpha <- simulation[[simul]]$alpha
+  theta <- simulation[[simul]]$theta
+  gamma_tau <- est_gamma(Phi, theta)
+  Y <- Y_list[[simul]]
+  X <- X_list[[simul]]
+  Y_hat <- lapply(gamma_tau, FUN = function(x) X %*% (x + alpha))
+  SSE <- lapply(Y_hat, FUN = function(x) as.vector(x - Y)^2 %>% sum)
+  SISE[simul] <- sapply(SSE[-1], FUN = function(x) (x/m)*h) %>% sum
+  
+}
 
 c(mean(SISE), sd(SISE))
-
 ```
 
 ---
@@ -513,24 +515,26 @@ sp_table %>%
 ### 4-3. SISE
 
 
-$$\text{SISE} = \sum_{i=1}^n\sum_{g=1}^m\int_\Delta\big(\hat{Y}_i^{(g)}(\tau)-Y_i^{(g)}(\tau)\big)^2d\tau/m$$
+$$\begin{aligned}\text{SISE}&=\sum_{i=1}^n\sum_{g=1}^m\int_\Delta\big(\hat{Y}_i^{(g)}(\tau)-Y_i^{(g)}(\tau)\big)^2d\tau/m\\&=\frac{h}{m}\sum_{\ell=1}^b\sum_{i=1}^n\sum_{g=1}^m\bigg(\hat{Y}_i^{(g)}(\tau_\ell)-Y_i^{(g)}(\tau_\ell)\bigg)\end{aligned}$$
 
 
 ```{r}
-alpha <- simulation[[1]]$alpha
-theta <- simulation[[1]]$theta
-gamma_tau <- est_gamma(Phi, theta)
-Y <- Y_list[[1]]
-X <- X_list[[1]]
 h <- tau_seq[2] - tau_seq[1]
 
-
-Y_hat <- lapply(gamma_tau, FUN = function(x) X %*% (x + alpha))
-
-SISE <- (sapply(Y_hat, FUN = function(x) as.vector(x - Y)^2 %>% sum) * h/m)
+SISE <- vector(mode = "numeric", length = simul_times)
+for(simul in 1:simul_times) {
+  alpha <- simulation[[simul]]$alpha
+  theta <- simulation[[simul]]$theta
+  gamma_tau <- est_gamma(Phi, theta)
+  Y <- Y_list[[simul]]
+  X <- X_list[[simul]]
+  Y_hat <- lapply(gamma_tau, FUN = function(x) X %*% (x + alpha))
+  SSE <- lapply(Y_hat, FUN = function(x) as.vector(x - Y)^2 %>% sum)
+  SISE[simul] <- sapply(SSE[-1], FUN = function(x) (x/m)*h) %>% sum
+  
+}
 
 c(mean(SISE), sd(SISE))
-
 ```
 
 
@@ -715,26 +719,208 @@ $$\text{SISE} = \sum_{i=1}^n\sum_{g=1}^m\int_\Delta\big(\hat{Y}_i^{(g)}(\tau)-Y_
 
 
 ```{r}
-alpha <- simulation[[1]]$alpha
-theta <- simulation[[1]]$theta
-gamma_tau <- est_gamma(Phi, theta)
-Y <- Y_list[[1]]
-X <- X_list[[1]]
 h <- tau_seq[2] - tau_seq[1]
 
-
-Y_hat <- lapply(gamma_tau, FUN = function(x) X %*% (x + alpha))
-
-SISE <- (sapply(Y_hat, FUN = function(x) as.vector(x - Y)^2 %>% sum) * h/m)
+SISE <- vector(mode = "numeric", length = simul_times)
+for(simul in 1:simul_times) {
+  alpha <- simulation[[simul]]$alpha
+  theta <- simulation[[simul]]$theta
+  gamma_tau <- est_gamma(Phi, theta)
+  Y <- Y_list[[simul]]
+  X <- X_list[[simul]]
+  Y_hat <- lapply(gamma_tau, FUN = function(x) X %*% (x + alpha))
+  SSE <- lapply(Y_hat, FUN = function(x) as.vector(x - Y)^2 %>% sum)
+  SISE[simul] <- sapply(SSE[-1], FUN = function(x) (x/m)*h) %>% sum
+  
+}
 
 c(mean(SISE), sd(SISE))
 
 ```
 
 
+# Solution Path
+
+## 1. Data Generation
+
+```{r}
+set.seed(0)
+n <- 400
+m <- 10
+p <- 30
+b <- 21
+num_rank <- 5
+
+X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n) %>% cbind(1, .)   #add intercept term in X
+
+col_ind <- sample(1:m, size = m, replace = FALSE)
+row_ind <- sample(1:(p+1), size = m)
+sp_mat <- matrix(0, nrow = p+1, ncol = m)
+for(i in 1:m) {
+  sp_mat[row_ind[i], col_ind[i]] <- rnorm(1, mean = 5, sd = 0.1)
+}
+num_zero <- which(sp_mat==0, arr.ind = TRUE) %>% nrow
+num_nz <- (p+1)*m - num_zero
+
+LR_mat <- matrix(rnorm((p+1)*m, mean = 1, sd = 0.1), ncol = m) # make low rank matrix using SVD
+SVD <- svd(LR_mat)
+D_mat <- diag(SVD$d)
+idx <- (num_rank+1):m
+D_mat[idx, idx] <- 0
+LR_mat <- SVD$u %*% D_mat %*% t(SVD$v)          
+
+true_B <- sp_mat + LR_mat            # B(tau) = sparse matrix + low rank matrix
+
+eps <- matrix(rnorm(n*m, mean = 0, sd = 0.1), nrow = n)
+
+Y <- X%*%true_B + eps
+```
+
+```{r}
+K <- 10
+tau_seq <- seq(from = 0.4, to = 0.6, length.out = b)
+
+knots_seq <- seq(min(tau_seq) - 0.02, max(tau_seq) + 0.02, length.out = K)
+Phi <- fda::bsplineS(tau_seq, breaks= knots_seq, norder=2, nderiv=0, returnMatrix=FALSE)
+
+V <- calc_V(X, Phi)
+```
+
+## 2. Low rank
+
+```{r}
+cores=detectCores()
+cl <- makeCluster(cores[1]-2) #not to overload your computer
+registerDoParallel(cl) # Ready to parallel
+lamb1_seq <- c(1:10, 15, 20, 30, 35)
+
+simulation <- foreach(lambda_1 = lamb1_seq) %dopar% {
+  library(tidyverse)
+  library(splines)
+  library(Matrix)
+  library(Rcpp)
+  library(glmnet)
+  library(fda)
+  
+  tau_seq <- seq(from = 0.4, to = 0.6, length.out = b)
+  lasso_coef <- matrix(nrow = p+1, ncol = m)
+  for(g in 1:m) {
+    cv.lasso <- cv.glmnet(x = X[, -1], y = Y[, g], 
+                          alpha = 1, type.measure = "mae")
+    lasso_model <- glmnet(X[, -1], Y[, g], 
+                          family = "gaussian", alpha = 1, lambda = cv.lasso$lambda.min)
+    lasso_coef[, g] <- c(lasso_model$a0, as.vector(lasso_model$beta))
+  }
+  
+  theta_init <- matrix(nrow = (p+1)*K, ncol = m)
+  for(g in 1:m) {
+    for(j in 0:p) {
+      theta_init[((j*K)+1):((j+1)*K), g] <- lasso_coef[j+1, g]
+    }
+  }
+  
+  Y_modified <- Y - X%*%lasso_coef
+  lin_model <- lm(Y_modified~., data = data.frame(X[, -1]))
+  alpha_init <- lin_model$coefficients
+  
+  result <- add_decomp_r(delta = 1, lambda_1 = lambda_1, lambda_2 = 20, tol_error = 0.1,max_iter = 300,
+                       X = X, Y = Y, V = V, Phi = Phi, 
+                     theta_0 = theta_init, alpha_0 = alpha_init)
+  result
+}
 
 
 
+stopCluster(cl)
+```
+
+
+
+```{r}
+rank <- simulation %>% sapply(FUN = function(x) x$alpha %>% rankMatrix %>% .[1])
+
+data.frame(lambda_1 = lamb1_seq, rank = rank) %>%
+  ggplot() +
+  geom_line(aes(x = lambda_1, y = rank)) +
+  labs(title = "Solution path for low rank matrix", 
+       x = expression(lambda[1]))
+```
+
+## 3. Sparse matrix
+
+```{r}
+cores=detectCores()
+cl <- makeCluster(cores[1]-2) #not to overload your computer
+registerDoParallel(cl) # Ready to parallel
+lamb2_seq <- c(seq(5, 60, by = 5), 70, 80, 90, 100)
+
+simulation <- foreach(lambda_2 = lamb2_seq) %dopar% {
+  library(tidyverse)
+  library(splines)
+  library(Matrix)
+  library(Rcpp)
+  library(glmnet)
+  library(fda)
+  
+  tau_seq <- seq(from = 0.4, to = 0.6, length.out = b)
+  lasso_coef <- matrix(nrow = p+1, ncol = m)
+  for(g in 1:m) {
+    cv.lasso <- cv.glmnet(x = X[, -1], y = Y[, g], 
+                          alpha = 1, type.measure = "mae")
+    lasso_model <- glmnet(X[, -1], Y[, g], 
+                          family = "gaussian", alpha = 1, lambda = cv.lasso$lambda.min)
+    lasso_coef[, g] <- c(lasso_model$a0, as.vector(lasso_model$beta))
+  }
+  
+  theta_init <- matrix(nrow = (p+1)*K, ncol = m)
+  for(g in 1:m) {
+    for(j in 0:p) {
+      theta_init[((j*K)+1):((j+1)*K), g] <- lasso_coef[j+1, g]
+    }
+  }
+  
+  Y_modified <- Y - X%*%lasso_coef
+  lin_model <- lm(Y_modified~., data = data.frame(X[, -1]))
+  alpha_init <- lin_model$coefficients
+  
+  result <- add_decomp_r(delta = 1, lambda_1 = 4, lambda_2 = lambda_2, tol_error = 0.1,max_iter = 300,
+                       X = X, Y = Y, V = V, Phi = Phi, 
+                     theta_0 = theta_init, alpha_0 = alpha_init)
+  result
+}
+
+
+
+stopCluster(cl)
+```
+
+
+$$\int_\Delta\{\hat{\Gamma}(\tau)\}_{jg}d\tau=\sum_{\ell=1}^b\{\hat{\Gamma}(\tau)\}_{jg}\frac{\Delta}{(b-1)}$$
+
+```{r}
+h <- tau_seq[2] - tau_seq[1]
+alpha_list <- lapply(simulation, FUN = function(x) x$alpha)
+theta_list <- lapply(simulation, FUN = function(x) x$theta)
+gamma_list <- lapply(theta_list, FUN = function(x) est_gamma(Phi, theta = x))
+
+sum_gamma_list <- lapply(gamma_list, FUN = function(x) x[-1] %>% Reduce("+", .))
+int_gamma <- sum_gamma_list %>% lapply(FUN = function(x) x*h)
+
+int_gamma_tidy <- lapply(int_gamma, FUN = function(x) data.frame(col = rep(1:m, each = (p+1)), 
+                                                          row = rep(1:(p+1), m),
+                                                          value = as.vector(x))) %>%
+  `names<-`(value = lamb2_seq) %>%
+  bind_rows(.id = "lambda_2") %>% tbl_df %>%
+  mutate(lambda_2 = as.numeric(lambda_2), row = as.character(row))
+
+int_gamma_tidy %>%
+  mutate(index = paste0("(", col, ",", row, ")")) %>%
+  ggplot() +
+  geom_line(aes(x = lambda_2, y = value, group = index)) +
+  labs(title = "Solution path for sparse matrix", 
+       x = expression(lambda[2]), 
+       y = expression("integrate"~Gamma~"("~tau~")"))
+```
 
 
 
